// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toast > should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-stretch overflow-hidden md:rounded-xl"
  >
    <div
      class="css-1hr04bz"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="circle-exclamation-mark"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
                stroke-miterlimit="10"
              />
              <path
                d="M10 10.5v-5"
                stroke-linecap="round"
                stroke-miterlimit="10"
              />
              <path
                d="M10 14h0"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="css-1r27gbg"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast > should render as danger toast 1`] = `
<DocumentFragment>
  <div
    class="flex items-stretch overflow-hidden md:rounded-xl"
  >
    <div
      class="css-1tghewh"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="circle-cross"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
                stroke-miterlimit="10"
              />
              <path
                d="M7 13l6-6M13 13L7 7"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="css-1md4zj4"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast > should render as hint toast 1`] = `
<DocumentFragment>
  <div
    class="flex items-stretch overflow-hidden md:rounded-xl"
  >
    <div
      class="css-1gmw2vt"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="circle-question-mark"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
              />
              <path
                d="M10 13.6h0M8.3 7.9c0-.9.7-1.7 1.7-1.7s1.7.7 1.7 1.7c0 .7-.4 1.4-1.2 1.6-.3.1-.5.4-.5.7v.8"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="css-2wi7ev"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast > should render as info toast 1`] = `
<DocumentFragment>
  <div
    class="flex items-stretch overflow-hidden md:rounded-xl"
  >
    <div
      class="css-1azrxwi"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="circle-info"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
                stroke-miterlimit="10"
              />
              <path
                d="M10 9.2v5"
                stroke-linecap="round"
                stroke-miterlimit="10"
              />
              <path
                d="M10 5.8h0"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="css-14w62d4"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast > should render as success toast 1`] = `
<DocumentFragment>
  <div
    class="flex items-stretch overflow-hidden md:rounded-xl"
  >
    <div
      class="css-njel2h"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="circle-check-mark"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
                stroke-miterlimit="10"
              />
              <path
                d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="css-17sbv9k"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast > should render as warning toast 1`] = `
<DocumentFragment>
  <div
    class="flex items-stretch overflow-hidden md:rounded-xl"
  >
    <div
      class="css-1hr04bz"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="circle-exclamation-mark"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
                stroke-miterlimit="10"
              />
              <path
                d="M10 10.5v-5"
                stroke-linecap="round"
                stroke-miterlimit="10"
              />
              <path
                d="M10 14h0"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="css-1r27gbg"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;
